Added managing users

--- a/src/RecruitMe.Web/ClientApp/components/account/emailverified/emailverified.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/emailverified/emailverified.vue.html
@@ -1,6 +1,6 @@
 ﻿<template>
-    <card-layout>
-        <v-card-text>
+    <card-layout className="col-sm-6">
+        <v-card-text >
             <h2>Email zostal potwierdzony</h2>
             Teraz mozesz sie zalogowac za pomoca loginu: {{$route.query.candidateId}}
         </v-card-text>
