--- a/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/navmenu/navmenu.vue.html
@@ -19,7 +19,7 @@
                 </v-toolbar-items>
             </template>
 
-            <template v-if="userLoggedIn && displayName!='AdministratorRecruitMeSystem@gmail.com'">
+            <template v-if="userLoggedIn && displayName!='Administrator RecruitMeSystem@gmail.com'">
                 <v-toolbar-items>
                     <!--<div>
                         {{displayName}}
@@ -33,7 +33,7 @@
                 </v-toolbar-items>
             </template>
 
-            <template v-if="userLoggedIn && displayName=='AdministratorRecruitMeSystem@gmail.com'">
+            <template v-if="userLoggedIn && displayName=='Administrator RecruitMeSystem@gmail.com'">
                 <v-toolbar-items>
                     <div>
                         {{displayName}}
