App compiles in docker env

--- a/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
@@ -17,5 +17,5 @@
     </div>
 </template>
 
-<script src="./PictureInput.ts"></script>
+<script src="./pictureInput.ts"></script>
 <style src="./pictureInput.css"></style>
